<resources>
    <string name="app_name"><font size="18"><b>Block Puzzle</b></font></string>
    <string name="version">8.0</string>
    <string name="startScreenTitle">Version 8.0 by SoltauFintel</string>
    <string name="neuesSpiel">New Game</string>
    <string name="gehtNicht">Does not fit!</string>
    <string name="startNewGame">Start new game?</string>
    <string name="score1">Score: XX</string>
    <string name="score2">Score: XX</string>
    <string name="gameOverScore1">Game over! Score: XX</string>
    <string name="gameOverScore2">Game over! Score: XX</string>
    <string name="winScore1">You won! Score: XX</string>
    <string name="winScore2">You won! Score: XX</string>
    <string name="move">move</string>
    <string name="moves">moves</string>
    <string name="save">Save</string>
    <string name="empty"/>
    <string name="leaveShipInSpace">Really quit game?</string>
    <string name="stoneWars">Stone Wars</string>
    <string name="oldGame">Old Game</string>
    <string name="blockPuzzle">Block Puzzle</string>
    <string name="navigation">Navigation</string>
    <string name="liberatePlanet_BlockPuzzle">Liberate planet (Block Puzzle)</string>
    <string name="playerName">Player name</string>
    <string name="enterPlayerName">Enter player name</string>
    <string name="selectAsTarget">Select</string>
    <string name="developer">Developer</string>
    <string name="dataexchange">Data exchange</string>
    <string name="selectTerritory">Select territory</string>
    <string name="saxony">Saxony</string>
    <string name="lowerSaxony">Lower Saxony</string>
    <string name="brandenburg">Brandenburg</string>
    <string name="northernTerritory">Northern hemisphere</string>
    <string name="southernTerritory">Southern hemisphere</string>
    <string name="planet">Planet</string>
    <string name="moon">Dwarf planet</string>
    <string name="giantPlanet">Giant planet</string>
    <string name="liberatedPlanetByYou">Liberated planet by you</string>
    <string name="liberatedTerritoryByYou">Liberated territory by you</string>
    <string name="planetOccByP1">Planet occupied by %1$s</string>
    <string name="orangeUnion">Orange Union</string>
    <string name="gravitation">Gravitation</string>
    <string name="position">Position</string>
    <string name="newLiberationAttemptQuestion">Start new liberation attempt?</string>
    <string name="planetNeedsNoLiberation">Planet needs no liberation</string>
    <string name="yourScoreYourMoves">Your score: %1$s, your moves: %2$s</string>
    <string name="scoreOfMoves">Score of %1$s: %2$s, moves: %3$s</string>
    <string name="newLiberationAttempt">Start new liberation attempt</string>
    <string name="territoryLiberated">Territory liberated!</string>
    <string name="planetLiberated">Planet liberated!</string>
    <string name="defeatedEnemy">Enemy defeated! Territory liberated!</string>
    <string name="quitGame">Quit game</string>
    <string name="continue1">Continue</string>
    <string name="infotext">Red alert! Captain, our spaceship was catapulted into an unknown galaxy by a space anomaly. How do we find our way back to our home galaxy? But first we have to liberate the planets from the Orange Union. In our peaceful age, conflicts are resolved by playing Block Puzzle. Let\'s go.</string>
    <string name="dataexchangeInfo">Use this to exchange your game state with other players. Copy your game state of the current quadrant and paste it into e.g. WhatsApp. Copy game state sent by other players and paste it here.</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="bayern">Upper Bavaria</string>
    <string name="luxemburg">Compton</string>
    <string name="mute">Mute</string>
    <string name="putData_makesNoSense">Makes no sense to paste the copied data</string>
    <string name="putData_formatError1">Don\'t understand data!</string>
    <string name="putData_formatError2">Data is not compatible! (wrong version)</string>
    <string name="putData_unknownCluster">Unknown star cluster!</string>
    <string name="putData_checksumMismatch">Manipulated game state will not be saved!</string>
    <string name="putData_wrongPlanetData">Wrong planet data!</string>
    <string name="putData_okay">No planets have been liberated by the enemy.</string>
    <string name="putData_success">Planets have been liberated by the enemy!</string>
    <string name="nothingToInsert">Nothing to insert</string>
    <string name="copied">Copied.</string>
    <string name="alpha">alpha</string>
    <string name="beta">beta</string>
    <string name="gamma">gamma</string>
    <string name="delta">delta</string>
    <string name="tooManyMoves">Too many moves!</string>
    <string name="noMoreGamePieces">Game over: No more game pieces!</string>
    <string name="daily1">Day 1</string>
    <string name="daily2">Day 2</string>
    <string name="daily3">Day 3</string>
    <string name="daily4">Day 4</string>
    <string name="daily5">Day 5</string>
    <string name="daily6">Day 6</string>
    <string name="daily7">Day 7</string>
    <string name="trophies">Cluster %1$d: bronze medals: %2$d, silver cups: %3$d, golden trophies: %4$d.\nPlatinum records: %5$d</string>
    <string name="receivedTrophy">Planet liberated! You received a trophy. (see data exchange)</string>
    <string name="theBronx">The Bronx</string>
    <string name="beverlyHills">Beverly Hills</string>
    <string name="queens">Queens</string>
    <string name="deathStarGame1">Death Star reactor 1</string>
    <string name="deathStarGame2">Death Star reactor 2</string>
    <string name="deathStarGame3">Death Star reactor 3</string>
    <string name="milkyWayAlertInfotext">Red alert! Captain, our spaceship was catapulted into the Milky Way by a space anomaly. Warning: our home Solar System is threatened by a Death Star. We have to destroy this one! This only works if we destroy the three reactors simultaneously.</string>
    <string name="deathStar">Death Star</string>
    <string name="deathStarGames123">Reactors 1 - 3</string>
    <string name="score">Score</string>
    <string name="reactorDestroyed">Reactor destroyed!</string>
    <string name="deathStarDestroyed">Last reactor destroyed!</string>
    <string name="backFromDeathStar">Red alert! Captain, all reactors destroyed. However, the explosion of the Death Star catapulted us back into the Upsilon galaxy. After all, we saved the Earth. Let\'s continue with the liberation of the planets from the Orange Union.</string>
    <string name="giveUpDeathStarGame">Give up</string>
    <string name="giveUpDeathStarGameQuestion">Give up Death Star destruction and go back to the Y galaxy?</string>
    <string name="defeatedEnemyAndPlanetLiberated">Enemy defeated! Planet liberated!</string>
    <string name="undo">Undo</string>
    <string name="planetNo">Planet %1$d</string>
    <string name="classic">Classic</string>
    <string name="cleaner">Cleaner</string>
    <string name="oneColor">One Color</string>
</resources>
